--- a/src/App.css
+++ b/src/App.css
@@ -353,6 +353,16 @@ a:visited {
 	gap: 2rem;
 }
 
+.video-player {
+	width: 100%;
+	height: 100%;
+}
+
+.video-player div {
+	height: 34%;
+	background-color: black;
+}
+
 footer {
 	background: #111;
 	height: auto;
